fdo#55570 - re-factor SvxAutocorrWordList to hide it's innards